# Tracking-ROS-Package

./: CMakeLists.txt  package.xml
include/Tracking/: cv-helpers.hpp  tracking.hpp
msg/: setpoint.msg  tracking.msg
src/: fhog.cpp  kcftracker.cpp  main.cpp  tracking.cpp
